--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /*CSS Selecetors ids and classes*/
 
 
-.trigger {
+/* .trigger {
     position: relative;
     border-radius: 50px;
     background: blue;
@@ -11,4 +11,115 @@
     height: 100px;
     text-align: center;
     font-size: 18px;
+} */
+
+.tvC {
+    position: relative;
+    margin: 25px auto;
+    border: 0.5px solid #000;
+    height: 600px;
+    width: 400px;
+    overflow-x: hidden;
+    overflow-y:auto; 
+    box-shadow: 4px 3px 4px #ccc;
+}
+
+.channelBlock{
+    border-bottom: #ccc 0.5px solid;
+    width: 100%;
+    position: relative;
+    padding: 10px 0;
+    z-index: 1;
+    overflow: hidden;
+}
+
+
+.channelBlock:nth-child(even){
+    background-color:#eee; 
+}
+
+.channelBlock:nth-child(odd){
+    background-color:#fff; 
+}
+
+
+.image {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    border: 0.5px solid #ccc;
+    overflow: hidden;
+    width: 75px;
+    height:100px;
+    background-color: #ccc;
+}
+
+.rating {
+    position: absolute;
+    right: 100px;
+    top: 5px;
+}
+
+
+.channel {
+    position: absolute;
+    left: 5px;
+    top: 5px;
+    border: 0.5px solid #ccc;
+    overflow: hidden;
+    width: 75px;
+    height:100px;
+    background-color: #ccc;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 15px; 
+}
+
+
+
+.title,
+.description,
+.rated {
+    position: relative;
+    left: 95px;
+}
+
+
+.slideDoor {
+    width:400px;
+    height: 100%;
+    z-index: 9;
+    position: absolute;
+    background-color: #fff;
+    top: 0px;
+    left: -400px;
+    overflow: hidden;
+    display: block;
+    transition: 500ms left ease-in-out;
+}
+
+.slideDoor.active {
+    left: 0px;
+}
+
+
+.sliderDoorVideo {
+    position: absolute;
+    width: 100%;
+    height: 300px;
+    background-color: red;
+    top: 0px;
+    left: 0px;
+}
+
+.closeBtn {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    width: 25px;
+    text-align: center;
+    height: 25px;
+    cursor: pointer;
+    color: #fff;
+    z-index: 8;
 }
